<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/matchdate"

                    android:paddingVertical="4dp"
                    />

             </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >



                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"

                        android:id="@+id/logo_home"
                        android:paddingVertical="10dp"/>
                    <TextView
                        android:id="@+id/txt_club_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_home"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamhomescore"
                        android:textSize="40dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="46dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="-"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamawayscore"
                        android:textSize="40dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="0"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"

                        android:id="@+id/logo_away"
                        android:paddingVertical="10dp"/>
                    <TextView
                        android:id="@+id/txt_club_away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_home"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>



            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingVertical="6dp"
     android:gravity="center_horizontal">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:id="@+id/txt_home_goal"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_weight="1"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Goals"
         android:textStyle="bold"
         android:textSize="16sp"
         android:paddingHorizontal="6dp"
        android:layout_weight="1"
         android:gravity="center_horizontal"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:id="@+id/txt_away_goal"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_weight="1"/>

 </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_home_shots"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Shots"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingHorizontal="6dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_away_shots"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_home_lineups"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_lineups"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingHorizontal="6dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_away_lineups"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/txt_home_gk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GK"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/txt_away_gk"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="6dp"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/txt_home_df"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingHorizontal="6dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/txt_away_df"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_home_mf"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingHorizontal="6dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_away_mf"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_home_fw"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FW"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingHorizontal="6dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_away_fw"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_home_subs"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Subs"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingHorizontal="6dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/txt_away_subs"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>
            </LinearLayout>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>